# xe-player

./: .gitignore  CMakeLists.txt  LICENSE  README.md  cmake-variants.yaml  main.cc  mainwidget.cc  mainwidget.h  model.h  player.cc  player.pro  resource.qrc  xewidget.cc  xewidget.h
player/: CMakeLists.txt
player/include/: audioinfo.h  controls.h  media.h  model.h  player.h  view.h  window.h
player/src/: controls.cc  main.cc  media.cc  model.cc  view.cc  window.cc
xe/: CMakeLists.txt  xe_main.cc
xe/include/: controls.h  mainwidget.h  model.h  view.h
xe/res/: resource.qrc
xe/src/: controls.cc  mainwidget.cc  model.cc  view.cc  xe.cc
